[project]
name = "open-student-env"
version = "0.1.0"
description = "OpenEnv RL environment for academic task management"
authors = [
    { name="Ishaan Shrivastava" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[tool.openenv]
entry_point = "app:app"